crates/engram-cli/tests/cli/snapshot/snapshots/cli__snapshot__projects_groups__groups_list_empty.snap
---
source: crates/engram-cli/tests/cli/snapshot/projects_groups.rs
expression: "f.run(&[\"groups\", \"list\"])"
---
$ engramdb --no-maintenance --dir [PROJECT] groups list
exit: 0
--- stdout ---
{
  "message": "No groups defined. Create one with `engramdb groups create <name>`."
}
--- stderr ---
