crates/engram-cli/tests/cli/snapshot/snapshots/cli__snapshot__projects_groups__groups_members_unknown.snap
---
source: crates/engram-cli/tests/cli/snapshot/projects_groups.rs
expression: "f.run(&[\"groups\", \"members\", \"no-such-group\"])"
---
$ engramdb --no-maintenance --dir [PROJECT] groups members no-such-group
exit: 0
--- stdout ---
{
  "message": "Group 'no-such-group' (id: __g_8622e56e0d2a) is not in the registry. Create it with `engramdb groups create no-such-group`."
}
--- stderr ---
