crates/engram-cli/tests/cli/snapshot/snapshots/cli__snapshot__projects_groups__groups_unsubscribe.snap
---
source: crates/engram-cli/tests/cli/snapshot/projects_groups.rs
expression: "f.run(&[\"groups\", \"unsubscribe\", \"backend\", \"--yes\"])"
---
$ engramdb --no-maintenance --dir [PROJECT] groups unsubscribe backend --yes
exit: 0
--- stdout ---
{
  "message": "Unsubscribed project '[PROJECT_ID]' from group 'backend' (id: __g_10e08a419e85).",
  "success": true
}
--- stderr ---
