crates/engram-cli/tests/cli/snapshot/snapshots/cli__snapshot__projects_groups__projects_bare.snap
---
source: crates/engram-cli/tests/cli/snapshot/projects_groups.rs
expression: "f.run(&[\"projects\"])"
---
$ engramdb --no-maintenance --dir [PROJECT] projects
exit: 0
--- stdout ---
{
  "created_at": "[TIMESTAMP]",
  "logical_scopes": [],
  "memory_count": 3,
  "project_id": "[PROJECT_ID]",
  "project_name": "workspace",
  "project_path": "[PROJECT]"
}
--- stderr ---
