crates/engram-cli/tests/cli/snapshot/snapshots/cli__snapshot__projects_groups__projects_delete_purge.snap
---
source: crates/engram-cli/tests/cli/snapshot/projects_groups.rs
expression: "f.run(&[\"--format\", \"plain\", \"projects\", \"delete\", &id, \"--force\", \"--purge\"])"
---
$ engramdb --no-maintenance --dir [PROJECT] --format plain projects delete [PROJECT_ID] --force --purge
exit: 0
--- stdout ---
Removed project from registry (path: [PROJECT])
Deleted global data (LanceDB, personal memories, transcripts).
--- stderr ---
